osprey_worker/src/osprey/engine/stdlib/udfs/tests/test_require/test_validates_for_nonexistent_rule_string.txt
error: required rule: `actions/foo.sml` not found
--> main.sml:2:13
     |
   2 | Require(rule='actions/foo.sml')
     |              ^ require attempted here